[gd_scene load_steps=45 format=3 uid="uid://6sm13k7eo6vp"]

[ext_resource type="Script" path="res://scenes/MasterMenu.gd" id="1_4dvo8"]
[ext_resource type="Script" path="res://processing/upgradebutton.gd" id="1_tset8"]
[ext_resource type="Script" path="res://scenes/gamemenu.gd" id="1_yeiq6"]
[ext_resource type="Texture2D" uid="uid://uvyn41wph5b7" path="res://art/menus/background/BG_focus.png" id="2_vx24s"]
[ext_resource type="Texture2D" uid="uid://c6qpwq23gd22b" path="res://art/menus/buttons/top_new.png" id="3_bbatm"]
[ext_resource type="FontFile" uid="uid://6dh5boa0nvfx" path="res://fonts/fff-forward/FFFFORWA.TTF" id="3_pjj2t"]
[ext_resource type="Texture2D" uid="uid://nk14dsmd5hew" path="res://art/menus/background/upgrades_back_2.png" id="4_3yydn"]
[ext_resource type="Texture2D" uid="uid://bkn3udj7anwe4" path="res://art/menus/buttons/top_new_pressed.png" id="4_gy6px"]
[ext_resource type="Texture2D" uid="uid://d2ymoyv855qy0" path="res://art/menus/buttons/top_new_hover.png" id="5_oxqn7"]
[ext_resource type="Texture2D" uid="uid://bgtbkge7tb6ig" path="res://art/menus/buttons/button_retract.png" id="9_btw4v"]
[ext_resource type="FontFile" uid="uid://ckcvei0nxbacg" path="res://fonts/orange-kid/Orange Kid.otf" id="9_muroc"]
[ext_resource type="Texture2D" uid="uid://ciivcjjojtewv" path="res://art/menus/background/upgrades_overlay.png" id="10_cdgj0"]
[ext_resource type="Texture2D" uid="uid://ctoby8876caab" path="res://art/menus/buttons/button_retract_hover.png" id="11_5ptk7"]
[ext_resource type="Texture2D" uid="uid://dgk4553djuswp" path="res://art/sprites/icons/life2.png" id="16_uqfii"]
[ext_resource type="Texture2D" uid="uid://j3lv8vhye8m2" path="res://art/sprites/icons/energy.png" id="17_be3tj"]
[ext_resource type="Theme" uid="uid://hnbn47314h6f" path="res://Themes/popup.tres" id="18_kwjo6"]
[ext_resource type="Texture2D" uid="uid://buuen5gg3ps4u" path="res://art/player/chicken4.png" id="20_f0yco"]
[ext_resource type="Texture2D" uid="uid://dmx0b14xsbgu3" path="res://art/items/farm/seed_pile.png" id="31_qye14"]
[ext_resource type="AudioStream" uid="uid://b5l4f35xkcnag" path="res://audio/sounds/close_menu.ogg" id="35_jub7d"]
[ext_resource type="AudioStream" uid="uid://dbxivaajgogrj" path="res://audio/sounds/open_menu.ogg" id="36_gqie4"]

[sub_resource type="Curve" id="Curve_7hqi5"]
min_value = 0.1
_data = [Vector2(0, 0.37), 0.0, 0.0, 0, 0, Vector2(1, 0.73), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="CurveTexture" id="CurveTexture_byc01"]
curve = SubResource("Curve_7hqi5")

[sub_resource type="Gradient" id="Gradient_t6ew0"]
offsets = PackedFloat32Array(0, 0.988048)
colors = PackedColorArray(1, 1, 1, 0.470588, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6511e"]
gradient = SubResource("Gradient_t6ew0")

[sub_resource type="Curve" id="Curve_qckor"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.533675), -1.50076, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_t6x0h"]
curve = SubResource("Curve_qckor")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7frcn"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(240, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
angle_min = -60.0
angle_max = 60.0
angle_curve = SubResource("CurveTexture_byc01")
gravity = Vector3(0, -20, 0)
linear_accel_min = 5.0
linear_accel_max = 10.0
scale_min = 20.0
scale_max = 40.0
scale_curve = SubResource("CurveTexture_t6x0h")
color_ramp = SubResource("GradientTexture1D_6511e")
turbulence_noise_scale = 10.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mfhiu"]
load_path = "res://.godot/imported/button_retract_down.png-edea1835989194f86c8a411ea06e9bbd.ctex"

[sub_resource type="Animation" id="Animation_2sk6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_r4ub2"]
resource_name = "threading"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 99]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_py2re"]
_data = {
"RESET": SubResource("Animation_2sk6o"),
"threading": SubResource("Animation_r4ub2")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q11yd"]
bg_color = Color(0.215686, 0.419608, 0.337255, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dj6r"]
bg_color = Color(0.6, 0.898039, 0.313726, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="Theme" id="Theme_lfld6"]
default_font_size = 8
ProgressBar/styles/background = SubResource("StyleBoxFlat_q11yd")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_3dj6r")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ax2tq"]
bg_color = Color(0.439216, 0.164706, 0.262745, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_innjn"]
bg_color = Color(0.819608, 0.321569, 0.368627, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="Theme" id="Theme_r35xc"]
default_font_size = 8
ProgressBar/styles/background = SubResource("StyleBoxFlat_ax2tq")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_innjn")

[sub_resource type="Animation" id="Animation_2bjjq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -380)]
}

[sub_resource type="Animation" id="Animation_iqajq"]
resource_name = "close_upgrade_menu"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -380)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("35_jub7d")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_7chev"]
resource_name = "open_upgrade_menu"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -380), Vector2(0, -377), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("36_gqie4")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44jex"]
_data = {
"RESET": SubResource("Animation_2bjjq"),
"close_upgrade_menu": SubResource("Animation_iqajq"),
"open_upgrade_menu": SubResource("Animation_7chev")
}

[sub_resource type="Animation" id="Animation_6yoqb"]
resource_name = "food_increase"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gamemenu/upgradebutton/icFood:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.4), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_yji8r"]
resource_name = "heartbeat"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gamemenu/upgradebutton/icHealth:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 2, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ib5bm"]
_data = {
"food_increase": SubResource("Animation_6yoqb"),
"heartbeat": SubResource("Animation_yji8r")
}

[node name="UpgradeMenus" type="Node"]
script = ExtResource("1_4dvo8")

[node name="gamemenu" type="Node2D" parent="."]
light_mask = 4
visibility_layer = 4
position = Vector2(0, -380)
script = ExtResource("1_yeiq6")

[node name="Focus" type="Sprite2D" parent="gamemenu"]
self_modulate = Color(1, 1, 1, 0.627451)
position = Vector2(0, 380)
texture = ExtResource("2_vx24s")
centered = false
offset = Vector2(0, -380)
metadata/_edit_lock_ = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="gamemenu"]
position = Vector2(240, 130)
amount = 60
process_material = SubResource("ParticleProcessMaterial_7frcn")
lifetime = 2.5
randomness = 1.0
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="gamemenu"]
scale = Vector2(2, 2)
texture = ExtResource("4_3yydn")
centered = false
metadata/_edit_lock_ = true

[node name="GUI_old" type="Control" parent="gamemenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="Sprite2D" parent="gamemenu/GUI_old"]
visible = false
texture = ExtResource("10_cdgj0")
centered = false

[node name="LLevel" type="Label" parent="gamemenu/GUI_old"]
layout_mode = 0
offset_left = 30.0
offset_top = 72.0
offset_right = 90.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("3_pjj2t")
theme_override_font_sizes/font_size = 12
text = "Level 0"

[node name="LFood" type="Label" parent="gamemenu/GUI_old"]
layout_mode = 0
offset_left = 67.0
offset_top = 96.0
offset_right = 123.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("3_pjj2t")
theme_override_font_sizes/font_size = 12
text = "000000000000"

[node name="MenuExit" type="TextureButton" parent="gamemenu/GUI_old"]
layout_mode = 0
offset_left = 194.0
offset_top = 314.0
offset_right = 290.0
offset_bottom = 360.0
texture_normal = ExtResource("9_btw4v")
texture_pressed = SubResource("CompressedTexture2D_mfhiu")
texture_hover = ExtResource("11_5ptk7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="gamemenu"]
volume_db = -10.0

[node name="PlayerWindow" type="Sprite2D" parent="gamemenu"]
position = Vector2(420, 79)
scale = Vector2(2, 2)
texture = ExtResource("20_f0yco")
flip_h = true
hframes = 7
vframes = 3

[node name="TextBubble" type="Label" parent="gamemenu"]
offset_left = 260.0
offset_top = 48.0
offset_right = 380.0
offset_bottom = 94.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("9_muroc")
theme_override_font_sizes/font_size = 12
text = "You are my special
ba nau nau nananau"
autowrap_mode = 2
visible_ratio = -0.027027

[node name="TextClick" type="Button" parent="gamemenu/TextBubble"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="gamemenu/TextBubble"]
libraries = {
"": SubResource("AnimationLibrary_py2re")
}

[node name="Foodicon" type="Sprite2D" parent="gamemenu"]
position = Vector2(46, 102)
scale = Vector2(2, 2)
texture = ExtResource("31_qye14")

[node name="GUI" type="Control" parent="gamemenu"]
layout_mode = 3
anchors_preset = 0
offset_left = 18.0
offset_top = 134.0
offset_right = 462.0
offset_bottom = 314.0

[node name="RichTextLabel" type="RichTextLabel" parent="gamemenu/GUI"]
clip_contents = false
custom_minimum_size = Vector2(120, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 20.0
grow_horizontal = 0
bbcode_enabled = true
text = "[wave freq=2]Craving: [img]art/menus/cravings/craving_placehold.png[/img]"
scroll_active = false

[node name="upgradebutton" type="Control" parent="gamemenu"]
z_index = -1
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.234
offset_top = 380.0
offset_bottom = 380.08
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tset8")

[node name="UpgradeButton" type="TextureButton" parent="gamemenu/upgradebutton"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 76.0
texture_normal = ExtResource("3_bbatm")
texture_pressed = ExtResource("4_gy6px")
texture_hover = ExtResource("5_oxqn7")

[node name="icHealth" type="Sprite2D" parent="gamemenu/upgradebutton"]
position = Vector2(19, 39)
texture = ExtResource("16_uqfii")

[node name="PLabelLevel" type="RichTextLabel" parent="gamemenu/upgradebutton"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 30.0
offset_top = 31.0
offset_right = 51.0
offset_bottom = 51.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[right]50"
scroll_active = false
autowrap_mode = 0

[node name="max" type="RichTextLabel" parent="gamemenu/upgradebutton/PLabelLevel"]
clip_contents = false
layout_mode = 0
offset_left = 21.0
offset_right = 417.0
offset_bottom = 21.0
scale = Vector2(0.25, 0.25)
bbcode_enabled = true
text = "/50"
scroll_active = false
autowrap_mode = 1

[node name="icFood" type="Sprite2D" parent="gamemenu/upgradebutton"]
position = Vector2(179, 44)
scale = Vector2(1.2, 1.4)
texture = ExtResource("31_qye14")

[node name="PLabelFood" type="RichTextLabel" parent="gamemenu/upgradebutton"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
offset_left = 190.0
offset_top = 31.0
offset_right = 308.0
offset_bottom = 51.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "12345"
scroll_active = false
autowrap_mode = 0

[node name="icEnergy" type="Sprite2D" parent="gamemenu/upgradebutton"]
position = Vector2(338, 39)
texture = ExtResource("17_be3tj")

[node name="PLabelSprouts" type="RichTextLabel" parent="gamemenu/upgradebutton"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_left = 348.0
offset_top = 31.0
offset_right = 368.0
offset_bottom = 51.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "50
"
scroll_active = false
autowrap_mode = 0

[node name="max" type="RichTextLabel" parent="gamemenu/upgradebutton/PLabelSprouts"]
clip_contents = false
layout_mode = 0
offset_left = 21.0
offset_right = 65.0
offset_bottom = 21.0
scale = Vector2(0.25, 0.25)
bbcode_enabled = true
text = "/50
"
scroll_active = false

[node name="Panel" type="Panel" parent="gamemenu/upgradebutton"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 313.0
offset_right = 156.0
offset_bottom = 379.0
mouse_filter = 1
theme = ExtResource("18_kwjo6")

[node name="Goal" type="RichTextLabel" parent="gamemenu/upgradebutton/Panel"]
clip_contents = false
layout_mode = 0
offset_left = 4.0
offset_top = 6.0
offset_right = 210.0
offset_bottom = 88.0
scale = Vector2(0.7, 0.7)
mouse_filter = 2
theme_override_constants/line_separation = -5
theme_override_fonts/normal_font = ExtResource("9_muroc")
theme_override_fonts/bold_font = ExtResource("3_pjj2t")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[b]Goal:[/b]
random"
scroll_active = false

[node name="EnergyBar" type="ProgressBar" parent="gamemenu/upgradebutton"]
layout_mode = 0
offset_left = 371.0
offset_top = 39.0
offset_right = 468.0
offset_bottom = 45.0
theme = SubResource("Theme_lfld6")
max_value = 50.0
step = 1.0
value = 25.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="gamemenu/upgradebutton"]
layout_mode = 0
offset_left = 53.0
offset_top = 39.0
offset_right = 148.0
offset_bottom = 45.0
theme = SubResource("Theme_r35xc")
max_value = 50.0
step = 1.0
value = 25.0
show_percentage = false

[node name="GUIAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../gamemenu")
libraries = {
"": SubResource("AnimationLibrary_44jex")
}

[node name="IconsAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ib5bm")
}

[connection signal="pressed" from="gamemenu/GUI_old/MenuExit" to="gamemenu" method="_on_menu_exit_pressed"]
[connection signal="pressed" from="gamemenu/TextBubble/TextClick" to="gamemenu" method="_on_text_click_pressed"]
[connection signal="animation_finished" from="GUIAnimation" to="gamemenu" method="_on_menu_open"]
